# h5nry

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/h5nry/: __init__.py  app.py  cli.py  config.py  session.py  tool_registry.py  tui.py
src/h5nry/data/: default_config.yaml  system_prompt.txt  tool_schemas.json  tui.css
src/h5nry/llm/: __init__.py  anthropic_client.py  base.py  gemini_client.py  openai_client.py
src/h5nry/tools/: __init__.py  hdf5_tree.py  plotting.py  python_exec.py  stats.py
tests/: __init__.py  test_config.py  test_hdf5_tree.py  test_python_exec.py  test_stats.py
